--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 $bg-dark: #222d32;
 $bg-black: rgb(36, 26, 26);
 
@@ -14,7 +16,7 @@ body,
   height: 100%;
   background: $bg-dark;
   scroll-behavior: smooth;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 
   span {
     color: red;
@@ -71,8 +73,6 @@ body,
     width: 50%;
     margin: 30px auto;
 
-   
-
     li {
       margin-top: 30px;
       width: 100%;
@@ -81,26 +81,25 @@ body,
       box-shadow: 10px 5px 5px $bg-black;
       list-style: none;
 
-      .result{
+      .result {
         display: flex;
         justify-content: space-between;
         padding-top: 20px;
-      
 
         .infos {
           display: flex;
           flex-wrap: wrap;
           justify-content: flex-end;
           height: 100%;
-        
-        p {
-          font-size: 12px;
-          border-radius: 5px;
-          margin: 2px;
-          padding: 5px;
-          background-color: $bg-dark;
+
+          p {
+            font-size: 12px;
+            border-radius: 5px;
+            margin: 2px;
+            padding: 5px;
+            background-color: $bg-dark;
+          }
         }
-      }
         .names {
           margin-left: 20px;
           width: 50%;
@@ -113,19 +112,28 @@ body,
             margin: 0;
             font-size: 30px;
           }
-          h5 {
-            color: white;
-            margin: auto;
+          .owner {
+            margin-top: 5px;
+            display: flex;
+            justify-content: flex-start;
+            h5 {
+              color: white;
+              margin: 0;
+              align-self: center;
+            }
             img {
               border: 1px solid white;
               width: 20px;
               border-radius: 50%;
-              margin-top: 5px;
+              margin-left: 5px;
+              margin-bottom: 2px;
             }
           }
         
-    }
-  }
+           
+          
+        }
+      }
       p {
         margin: 10px 20px;
         color: white;
